--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>入力画面</title>
   </head>
   <body>
-    HellowWorld!です
+    <h1>見出し</h1>
+    <form action="check" th:action="@{chkScreen}">
+      <p>４桁の整数を入力してください</p>
+      <input type="text" name="number">
+      <input type="submit" value="確認画面へ">
+    </form>
   </body>
 </html>
