--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>見出し</h1>
-    <form action="check" th:action="@{chkScreen}">
+    <form method="POST" action="check" th:action="@{chkScreen}">
       <p>４桁の整数を入力してください</p>
       <input type="text" name="number">
       <input type="submit" value="確認画面へ">
